--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
+    <script src="https://kit.fontawesome.com/1c228abca5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-
+    <div class="container">
+        <header>
+            <a href="index.html" class="header_logo_link">
+                <img src="images/plane.svg" alt="plane icon" class="header_logo_img">
+            </a>
+            <nav>
+                <ul class="nav_list">
+                    <li class="list_item">
+                        <a href="" class="list_item_link first">News</a>
+                    </li>
+                    <li class="list_item">
+                        <a href="" class="list_item_link">Services</a>
+                    </li>
+                    <li class="list_item">
+                        <a href="" class="list_item_link">Who We Are</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="search_container">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+        </header>
+    </div>
 </body>
 
 </html>
