--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
+    <!-- container -->
     <div class="container">
+        <!-- header -->
         <header>
             <a href="index.html" class="header_logo_link">
                 <img src="images/plane.svg" alt="plane icon" class="header_logo_img">
@@ -33,6 +35,36 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
         </header>
+        <!-- section -->
+        <section>
+            <h2 class="section_title">Company News</h2>
+            <div class="cards_container">
+                <div class="section_card">
+                    <img src="images/img1.png" alt="section image 1" class="card_img">
+                    <p class="card_text">Open the article and give it a quick read.</p>
+                </div>
+                <div class="section_card">
+                    <img src="images/img2.png" alt="section image 2" class="card_img">
+                    <p class="card_text">Open the article and give it a quick read.</p>
+                </div>
+                <div class="section_card">
+                    <img src="images/img3.png" alt="section image 3" class="card_img">
+                    <p class="card_text">Open the article and give it a quick read. </p>
+                </div>
+                <div class="section_card">
+                    <img src="images/img4.png" alt="section image 4" class="card_img">
+                    <p class="card_text">Open the article and give it a quick read. </p>
+                </div>
+                <div class="section_card">
+                    <img src="images/img5.png" alt="section image 5" class="card_img">
+                    <p class="card_text">Open the article and give it a quick read. </p>
+                </div>
+                <div class="section_card">
+                    <img src="images/img6.png" alt="section image 6" class="card_img">
+                    <p class="card_text">Open the article and give it a quick read. </p>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 
