--- a/index.html
+++ b/index.html
@@ -65,6 +65,29 @@
                 </div>
             </div>
         </section>
+        <!-- footer -->
+        <footer>
+            <div class="contact_info">
+                <h3 class="contact_info_title">Follow Us</h3>
+                <div class="contact_into_links">
+                    <a href="https://www.facebook.com/">
+                        <i class="fa-brands fa-facebook-f contact_link"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/">
+                        <i class="fa-brands fa-linkedin-in contact_link"></i>
+                    </a>
+                    <a href="https://www.instagram.com/">
+                        <i class="fa-brands fa-instagram contact_link"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="payment_cards">
+                <img src="images/card1.svg" alt="paymeny method" class="payment_card">
+                <img src="images/card2.svg" alt="paymeny method" class="payment_card">
+                <img src="images/card3.svg" alt="paymeny method" class="payment_card">
+                <img src="images/card4.svg" alt="paymeny method" class="payment_card">
+            </div>
+        </footer>
     </div>
 </body>
 
