--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
             <div class="contact_info">
                 <h3 class="contact_info_title">Follow Us</h3>
                 <div class="contact_into_links">
-                    <a href="https://www.facebook.com/">
+                    <a href="https://www.facebook.com/" target="_blank">
                         <i class="fa-brands fa-facebook-f contact_link"></i>
                     </a>
-                    <a href="https://www.linkedin.com/">
+                    <a href="https://www.linkedin.com/" target="_blank">
                         <i class="fa-brands fa-linkedin-in contact_link"></i>
                     </a>
-                    <a href="https://www.instagram.com/">
+                    <a href="https://www.instagram.com/" target="_blank">
                         <i class="fa-brands fa-instagram contact_link"></i>
                     </a>
                 </div>
